--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -89,7 +89,8 @@
     "                                                 _usecols=abide_name,\n",
     "                                                 csv_engine=\"c\",\n",
     "                                                 sample=1250000,\n",
-    "                                                 multp=10)\n",
+    "                                                 multp=10,\n",
+    "                                                 core_num=10)\n",
     "np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
     "\n",
     "print(\"sklearn MI calculation:\")\n",
@@ -98,7 +99,8 @@
     "                                                        _usecols=abide_name,\n",
     "                                                        csv_engine=\"c\",\n",
     "                                                        sample=1250000,\n",
-    "                                                        multp=10)\n",
+    "                                                        multp=10,\n",
+    "                                                        core_num=10)\n",
     "np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
     "\n",
     "print(\"Pearson's correlation calculation:\")\n",
@@ -107,7 +109,8 @@
     "                                                   _usecols=abide_name,\n",
     "                                                   csv_engine=\"c\",\n",
     "                                                   sample=1250000,\n",
-    "                                                   multp=10)\n",
+    "                                                   multp=10,\n",
+    "                                                   core_num=10)\n",
     "np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)"
    ]
   },
@@ -257,14 +260,16 @@
     "                                             _usecols=abide_name,\n",
     "                                             csv_engine=\"c\",\n",
     "                                             sample=1250000,\n",
-    "                                             multp=10)\n",
+    "                                             multp=10,\n",
+    "                                             core_num=10)\n",
     "np.save(r\"./ABIDE_diagnosis_MI_output\", mi_output)\n",
     "\n",
     "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
     "                                                   _usecols=abide_name,\n",
     "                                                   csv_engine=\"c\",\n",
     "                                                   sample=1250000,\n",
-    "                                                   multp=10)\n",
+    "                                                   multp=10,\n",
+    "                                                   core_num=10)\n",
     "np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)"
    ]
   },
@@ -419,12 +424,12 @@
     "        X_test, y_test = df.iloc[train_test_div:, 1:], df.iloc[train_test_div:,\n",
     "                                                               0]\n",
     "        if fun in [ElasticNetCV, LassoCV]:\n",
-    "            fit = fun(cv=5, random_state=seed, n_jobs=-1).fit(X_train, y_train)\n",
+    "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "        elif fun in [LarsCV, LassoLarsCV\n",
     "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
-    "            fit = fun(cv=5, n_jobs=-1).fit(X_train, y_train)\n",
+    "            fit = fun(cv=5, n_jobs=10).fit(X_train, y_train)\n",
     "        y_pred = fit.predict(X_test)\n",
     "        out = r2_score(y_test, y_pred)\n",
     "    else:\n",
@@ -477,12 +482,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:54:25.912317Z",
-     "start_time": "2023-02-06T23:54:25.876750Z"
+     "end_time": "2023-02-07T19:06:44.411769Z",
+     "start_time": "2023-02-07T19:06:44.339155Z"
     }
    },
    "outputs": [],
@@ -505,7 +510,7 @@
     "#!/bin/bash\n",
     "#SBATCH --account=def-cgreenwo_cpu\n",
     "#SBATCH --nodes=1\n",
-    "#SBATCH --ntasks-per-node=10\n",
+    "#SBATCH --cpus-per-task=10\n",
     "#SBATCH --mem=80G\n",
     "#SBATCH --time=6-00:00:00\n",
     "#SBATCH --job-name={dep_measure}_{fun_name}\n",
@@ -580,12 +585,12 @@
     "        X_test, y_test = df.iloc[train_test_div:, 1:], df.iloc[train_test_div:,\n",
     "                                                               0]\n",
     "        if fun in [ElasticNetCV, LassoCV]:\n",
-    "            fit = fun(cv=5, random_state=seed, n_jobs=-1).fit(X_train, y_train)\n",
+    "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "        elif fun in [LarsCV, LassoLarsCV\n",
     "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
-    "            fit = fun(cv=5, n_jobs=-1).fit(X_train, y_train)\n",
+    "            fit = fun(cv=5, n_jobs=10).fit(X_train, y_train)\n",
     "        y_pred = fit.predict(X_test)\n",
     "        out = r2_score(y_test, y_pred)\n",
     "    else:\n",
@@ -646,12 +651,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:54:27.921797Z",
-     "start_time": "2023-02-06T23:54:26.178988Z"
+     "end_time": "2023-02-07T19:06:46.303981Z",
+     "start_time": "2023-02-07T19:06:44.818812Z"
     }
    },
    "outputs": [],
@@ -751,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
