--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:47:25.523731Z",
-     "start_time": "2023-02-06T23:47:24.167948Z"
+     "end_time": "2023-02-07T19:18:27.115245Z",
+     "start_time": "2023-02-07T19:18:25.218362Z"
     }
    },
    "outputs": [],
@@ -486,8 +486,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T19:06:44.411769Z",
-     "start_time": "2023-02-07T19:06:44.339155Z"
+     "end_time": "2023-02-07T19:19:33.178617Z",
+     "start_time": "2023-02-07T19:19:33.140982Z"
     }
    },
    "outputs": [],
@@ -506,8 +506,7 @@
     "    py_script = open(\n",
     "        r\"./ABIDE_predict_age/ABIDE_age_\" + dep_measure + \"_\" + fun_name +\n",
     "        \".py\", 'w')\n",
-    "    bash_script.write(r\"\"\"\n",
-    "#!/bin/bash\n",
+    "    bash_script.write(r\"\"\"#!/bin/bash\n",
     "#SBATCH --account=def-cgreenwo_cpu\n",
     "#SBATCH --nodes=1\n",
     "#SBATCH --cpus-per-task=10\n",
@@ -543,8 +542,7 @@
     "\n",
     "python3 ABIDE_age_{dep_measure}_{fun_name}.py\n",
     "    \"\"\".format(dep_measure=dep_measure, fun_name=fun_name))\n",
-    "    py_script.write(r\"\"\"\n",
-    "import numpy as np\n",
+    "    py_script.write(r\"\"\"import numpy as np\n",
     "import pandas as pd\n",
     "from dask import dataframe as dd\n",
     "import matplotlib.pyplot as plt\n",
@@ -655,8 +653,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T19:06:46.303981Z",
-     "start_time": "2023-02-07T19:06:44.818812Z"
+     "end_time": "2023-02-07T19:19:35.359765Z",
+     "start_time": "2023-02-07T19:19:33.539596Z"
     }
    },
    "outputs": [],
@@ -756,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -775,6 +773,35 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
