yapf formatter and added some print

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -81,8 +81,9 @@
     "abide_name = [_abide_name[-3]] + _abide_name[1:-3]\n",
     "\n",
     "np.save(r\"./ABIDE_columns\", _abide_name[1:-3])\n",
-    "\n",
     "# so that the left first column is the outcome and the rest columns are areas\n",
+    "\n",
+    "print(\"engine:\")\n",
     "print(\"Our developed FFT-based MI calculation:\")\n",
     "\n",
     "mi_output = mi.continuous_screening_csv_parallel(csv_file,\n",
@@ -90,7 +91,8 @@
     "                                                 csv_engine=\"c\",\n",
     "                                                 sample=1250000,\n",
     "                                                 multp=10,\n",
-    "                                                 core_num=10)\n",
+    "                                                 core_num=10,\n",
+    "                                                 share_memory=True)\n",
     "np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
     "\n",
     "print(\"sklearn MI calculation:\")\n",
@@ -100,7 +102,8 @@
     "                                                        csv_engine=\"c\",\n",
     "                                                        sample=1250000,\n",
     "                                                        multp=10,\n",
-    "                                                        core_num=10)\n",
+    "                                                        core_num=10,\n",
+    "                                                        share_memory=True)\n",
     "np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
     "\n",
     "print(\"Pearson's correlation calculation:\")\n",
@@ -110,7 +113,8 @@
     "                                                   csv_engine=\"c\",\n",
     "                                                   sample=1250000,\n",
     "                                                   multp=10,\n",
-    "                                                   core_num=10)\n",
+    "                                                   core_num=10,\n",
+    "                                                   share_memory=True)\n",
     "np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)"
    ]
   },
@@ -256,20 +260,27 @@
     "abide_name = [_abide_name[-1]] + _abide_name[1:-3]\n",
     "# so that the left first column is the outcome and the rest columns are areas\n",
     "\n",
+    "print(\"engine:\")\n",
+    "print(\"Our developed FFT-based MI calculation:\")\n",
+    "\n",
     "mi_output = mi.binary_screening_csv_parallel(csv_file,\n",
     "                                             _usecols=abide_name,\n",
     "                                             csv_engine=\"c\",\n",
     "                                             sample=1250000,\n",
     "                                             multp=10,\n",
-    "                                             core_num=10)\n",
+    "                                             core_num=10,\n",
+    "                                             share_memory=True)\n",
     "np.save(r\"./ABIDE_diagnosis_MI_output\", mi_output)\n",
+    "\n",
+    "print(\"Pearson's correlation calculation:\")\n",
     "\n",
     "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
     "                                                   _usecols=abide_name,\n",
     "                                                   csv_engine=\"c\",\n",
     "                                                   sample=1250000,\n",
     "                                                   multp=10,\n",
-    "                                                   core_num=10)\n",
+    "                                                   core_num=10,\n",
+    "                                                   share_memory=True)\n",
     "np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)"
    ]
   },
@@ -482,12 +493,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T22:34:26.176900Z",
-     "start_time": "2023-02-07T22:34:26.156047Z"
+     "end_time": "2023-02-08T00:33:10.228458Z",
+     "start_time": "2023-02-08T00:33:10.193152Z"
     }
    },
    "outputs": [],
@@ -649,12 +660,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T22:34:28.272698Z",
-     "start_time": "2023-02-07T22:34:26.836667Z"
+     "end_time": "2023-02-08T00:33:11.951749Z",
+     "start_time": "2023-02-08T00:33:10.346340Z"
     }
    },
    "outputs": [],
