--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -27,7 +27,8 @@
     "from sklearn.linear_model import LassoLarsCV\n",
     "from sklearn.metrics import r2_score\n",
     "import multiprocess as mp\n",
-    "from tqdm import tqdm as tqdm"
+    "from tqdm import tqdm as tqdm\n",
+    "import os"
    ]
   },
   {
@@ -67,6 +68,7 @@
     "from sklearn.metrics import r2_score\n",
     "import multiprocess as mp\n",
     "from tqdm import tqdm as tqdm\n",
+    "import os\n",
     "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "# abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
@@ -246,6 +248,7 @@
     "from sklearn.metrics import r2_score\n",
     "import multiprocess as mp\n",
     "from tqdm import tqdm as tqdm\n",
+    "import os\n",
     "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "# abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
@@ -401,6 +404,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import kendalltau\n",
     "from scipy.stats import rankdata\n",
+    "from scipy.stats import norm\n",
     "import fastHDMI as mi\n",
     "from sklearn.linear_model import LassoCV\n",
     "from sklearn.linear_model import ElasticNetCV\n",
@@ -409,7 +413,8 @@
     "from sklearn.linear_model import LassoLarsCV\n",
     "from sklearn.metrics import r2_score\n",
     "import multiprocess as mp\n",
-    "from tqdm import tqdm\n",
+    "from tqdm import tqdm as tqdm\n",
+    "import os\n",
     "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
@@ -493,12 +498,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T00:33:10.228458Z",
-     "start_time": "2023-02-08T00:33:10.193152Z"
+     "end_time": "2023-02-08T03:56:14.897884Z",
+     "start_time": "2023-02-08T03:56:14.808167Z"
     }
    },
    "outputs": [],
@@ -559,6 +564,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import kendalltau\n",
     "from scipy.stats import rankdata\n",
+    "from scipy.stats import norm\n",
     "import fastHDMI as mi\n",
     "from sklearn.linear_model import LassoCV\n",
     "from sklearn.linear_model import ElasticNetCV\n",
@@ -567,7 +573,8 @@
     "from sklearn.linear_model import LassoLarsCV\n",
     "from sklearn.metrics import r2_score\n",
     "import multiprocess as mp\n",
-    "from tqdm import tqdm\n",
+    "from tqdm import tqdm as tqdm\n",
+    "import os\n",
     "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
@@ -660,17 +667,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T00:33:11.951749Z",
-     "start_time": "2023-02-08T00:33:10.346340Z"
+     "end_time": "2023-02-08T03:56:18.269524Z",
+     "start_time": "2023-02-08T03:56:14.917873Z"
     }
    },
    "outputs": [],
    "source": [
+    "#!find . -name '*.py' -exec yapf --in-place '{}' \\;\n",
     "#!find . -name '*.py' -exec autopep8 --in-place '{}' \\;\n",
+    "!find . -name '*.py' -exec yapf --in-place '{}' \\;\n",
     "!find . -name '*.py' -exec autopep8 --in-place '{}' \\;"
    ]
   },
@@ -765,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
