add a job generator for screening

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T19:18:27.115245Z",
-     "start_time": "2023-02-07T19:18:25.218362Z"
+     "end_time": "2023-02-08T06:22:47.784778Z",
+     "start_time": "2023-02-08T06:22:46.559854Z"
     }
    },
    "outputs": [],
@@ -36,7 +36,7 @@
    "id": "c74af34a",
    "metadata": {},
    "source": [
-    "# Calculate MI for ABIDE data age outcome\n",
+    "# Calculate MI for ABIDE data age and diagnosis outcome\n",
     "## this block is only to be run on Compute Canada"
    ]
   },
@@ -121,106 +121,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "46ea4ca1-abfd-4856-8f70-63658655173a",
-   "metadata": {},
-   "source": [
-    "# Plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:40:01.361897Z",
-     "start_time": "2023-02-05T20:40:01.318269Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "abide_mi = np.load(r\"./ABIDE_age_MI_output.npy\")\n",
-    "plt.hist(np.log(abide_mi), 500)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58f1a09a-45cf-46a3-be42-9f9394ee4f96",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:40:01.998457Z",
-     "start_time": "2023-02-05T20:40:01.970196Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "abide_pearson = np.load(r\"./ABIDE_age_Pearson_output.npy\")\n",
-    "plt.hist(np.log(np.abs(abide_pearson)), 500)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b25d3fa0",
-   "metadata": {},
-   "source": [
-    "## Comparing two ranking with Kendall's $\\tau$\n",
-    "\n",
-    "The results show that the two ranking by mutual information and Pearson's correlation vary greatly by Kendall's tau -- I also tried the Pearson's correlation between two ranking (not that I should do this) and the correlation is also very small.\n",
-    "\n",
-    "**So in summary, the two ranking vary greatly.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "742260a9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:40:04.508696Z",
-     "start_time": "2023-02-05T20:40:04.482145Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.scatter(np.log(abide_mi), abide_pearson, s=10,\n",
-    "            alpha=.2)  # s is the dot size\n",
-    "plt.show()\n",
-    "# keep this, add different selections\n",
-    "# PREDICT AGE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e78ee74",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:40:05.318750Z",
-     "start_time": "2023-02-05T20:40:05.291831Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Kendall's tau: \\n\",\n",
-    "      kendalltau(rankdata(-abide_mi), rankdata(-np.abs(abide_pearson))))\n",
-    "print(\"Pearson's correlation: \\n\",\n",
-    "      np.corrcoef(rankdata(-abide_mi), rankdata(-np.abs(abide_pearson))))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8afd4dbe",
-   "metadata": {},
-   "source": [
-    "# Calculate MI for ABIDE data diagnosis outcome\n",
-    "## this block is only to be run on Compute Canada"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d9c3680c",
@@ -285,6 +185,262 @@
     "                                                   core_num=10,\n",
     "                                                   share_memory=True)\n",
     "np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "75940522",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-08T06:25:17.396994Z",
+     "start_time": "2023-02-08T06:25:17.353033Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "def engine_and_share_memory_status(mem_setting):\n",
+    "    if mem_setting == \"high_mem\":\n",
+    "        return \"c\", False\n",
+    "    elif mem_setting == \"share_mem\":\n",
+    "        return \"c\", True\n",
+    "    elif mem_setting == \"dask\":\n",
+    "        return \"dask\", False\n",
+    "\n",
+    "\n",
+    "def job_generator(mem_setting, outcome):\n",
+    "    py_1 = r\"\"\"import numpy as np\n",
+    "import pandas as pd\n",
+    "from dask import dataframe as dd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import kendalltau\n",
+    "from scipy.stats import rankdata\n",
+    "from scipy.stats import norm\n",
+    "import fastHDMI as mi\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.linear_model import ElasticNetCV\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.linear_model import LarsCV\n",
+    "from sklearn.linear_model import LassoLarsCV\n",
+    "from sklearn.metrics import r2_score\n",
+    "import multiprocess as mp\n",
+    "from tqdm import tqdm as tqdm\n",
+    "import os\n",
+    "\n",
+    "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "# abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
+    "abide = dd.read_csv(csv_file, sample=1250000)\n",
+    "\n",
+    "# _abide_name = abide.columns.tolist()[1:]\n",
+    "_abide_name = list(abide.columns)[1:]\n",
+    "\n",
+    "# print(_abide_name)\n",
+    "\n",
+    "# we don't inlcude age and sex in the screening since we choose to always include them in the model\n",
+    "\"\"\"\n",
+    "    if outcome == \"age\":\n",
+    "        py_2 = r\"\"\"\n",
+    "abide_name = [_abide_name[-3]] + _abide_name[1:-3]\n",
+    "\n",
+    "np.save(r\"./ABIDE_columns\", _abide_name[1:-3])\n",
+    "# so that the left first column is the outcome and the rest columns are areas\n",
+    "\n",
+    "print(\"The outcome is age.\")\n",
+    "print(\n",
+    "    \"Now running using {_csv_engine} CSV engine with share_memory={_share_mem_status}.\")\n",
+    "print(\"Our developed FFT-based MI calculation:\")\n",
+    "\n",
+    "mi_output = mi.continuous_screening_csv_parallel(csv_file,\n",
+    "                                                 _usecols=abide_name,\n",
+    "                                                 csv_engine={_csv_engine},\n",
+    "                                                 sample=1250000,\n",
+    "                                                 multp=10,\n",
+    "                                                 core_num=10,\n",
+    "                                                 share_memory={_share_mem_status})\n",
+    "np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
+    "\n",
+    "print(\"sklearn MI calculation:\")\n",
+    "\n",
+    "skmi_output = mi.continuous_skMI_screening_csv_parallel(csv_file,\n",
+    "                                                        _usecols=abide_name,\n",
+    "                                                        csv_engine={_csv_engine},\n",
+    "                                                        sample=1250000,\n",
+    "                                                        multp=10,\n",
+    "                                                        core_num=10,\n",
+    "                                                        share_memory={_share_mem_status})\n",
+    "np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
+    "\n",
+    "print(\"Pearson's correlation calculation:\")\n",
+    "\n",
+    "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
+    "                                                   _usecols=abide_name,\n",
+    "                                                   csv_engine={_csv_engine},\n",
+    "                                                   sample=1250000,\n",
+    "                                                   multp=10,\n",
+    "                                                   core_num=10,\n",
+    "                                                   share_memory={_share_mem_status})\n",
+    "np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)\n",
+    "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
+    "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1])\n",
+    "    elif outcome == \"diagnosis\":\n",
+    "        py_2 = r\"\"\"\n",
+    "abide_name = [_abide_name[-1]] + _abide_name[1:-3]\n",
+    "# so that the left first column is the outcome and the rest columns are areas\n",
+    "\n",
+    "print(\"The outcome is diagnosis.\")\n",
+    "print(\n",
+    "    \"Now running using {_csv_engine} CSV engine with share_memory={_share_mem_status}.\")\n",
+    "print(\"Our developed FFT-based MI calculation:\")\n",
+    "\n",
+    "mi_output = mi.binary_screening_csv_parallel(csv_file,\n",
+    "                                             _usecols=abide_name,\n",
+    "                                             csv_engine={_csv_engine},\n",
+    "                                             sample=1250000,\n",
+    "                                             multp=10,\n",
+    "                                             core_num=10,\n",
+    "                                             share_memory={_share_mem_status})\n",
+    "np.save(r\"./ABIDE_diagnosis_MI_output\", mi_output)\n",
+    "\n",
+    "print(\"Pearson's correlation calculation:\")\n",
+    "\n",
+    "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
+    "                                                   _usecols=abide_name,\n",
+    "                                                   csv_engine={_csv_engine},\n",
+    "                                                   sample=1250000,\n",
+    "                                                   multp=10,\n",
+    "                                                   core_num=10,\n",
+    "                                                   share_memory={_share_mem_status})\n",
+    "np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)\n",
+    "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
+    "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1])\n",
+    "\n",
+    "    Path(r\"./ABIDE_screening_\" + outcome + \"_\" + mem_setting + \".py\").touch()\n",
+    "    py_script = open(\n",
+    "        r\"./ABIDE_screening_\" + outcome + \"_\" + mem_setting + \".py\", 'w')\n",
+    "    py_script.write(py_1 + py_2)\n",
+    "\n",
+    "    Path(r\"./ABIDE_screening_\" + outcome + \"_\" + mem_setting + \".sh\").touch()\n",
+    "    bash_script = open(\n",
+    "        r\"./ABIDE_screening_\" + outcome + \"_\" + mem_setting + \".sh\", 'w')\n",
+    "    bash_script.write(r\"\"\"#!/bin/bash\n",
+    "# SBATCH --account=def-cgreenwo_cpu\n",
+    "# SBATCH --nodes=1\n",
+    "# SBATCH --cpus-per-task=10\n",
+    "# SBATCH --mem=80G\n",
+    "# SBATCH --time=18:00:00\n",
+    "# SBATCH --job-name=ABIDE_age\n",
+    "\n",
+    "module load gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
+    "\n",
+    "virtualenv --no-download $SLURM_TMPDIR/env\n",
+    "source $SLURM_TMPDIR/env/bin/activate\n",
+    "pip install --no-index --upgrade pip\n",
+    "\n",
+    "# ### run this block at the login node to build wheels\n",
+    "# ### get wheels builder\n",
+    "# git clone https://github.com/ComputeCanada/wheels_builder\n",
+    "# export PATH=$PATH:${{HOME}}/wheels_builder\n",
+    "# ### build KDEpy 1.1.0\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package KDEpy --version 1.1.0 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built nonconvexAG 1.0.6\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package nonconvexAG --version 1.0.6 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built fastHDMI 1.18.3\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.18.3 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "\n",
+    "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2\n",
+    "pip install --no-index /home/kyang/KDEpy-1.1.0+computecanada-cp38-cp38-linux_x86_64.whl\n",
+    "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
+    "pip install --no-index /home/kyang/fastHDMI-1.18.3+computecanada-py3-none-any.whl\n",
+    "\n",
+    "nvidia-smi\n",
+    "lscpu\n",
+    "\n",
+    "cp /home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv $SLURM_TMPDIR/\n",
+    "\n",
+    "python3 ABIDE_screening_{outcome}_{mem_setting}.py\n",
+    "\"\"\".format(outcome=outcome, mem_setting=mem_setting))\n",
+    "\n",
+    "\n",
+    "for mem_setting in [\"high_mem\", \"share_mem\", \"dask\"]:\n",
+    "    for outcome in [\"age\", \"diagnosis\"]:\n",
+    "        job_generator(mem_setting=mem_setting, outcome=outcome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "525e566f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-08T06:25:21.165139Z",
+     "start_time": "2023-02-08T06:25:17.796024Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!find . -name '*.py' -exec yapf --in-place '{}' \\;\n",
+    "#!find . -name '*.py' -exec autopep8 --in-place '{}' \\;\n",
+    "!find . -name '*.py' -exec yapf --in-place '{}' \\;\n",
+    "!find . -name '*.py' -exec autopep8 --in-place '{}' \\;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46ea4ca1-abfd-4856-8f70-63658655173a",
+   "metadata": {},
+   "source": [
+    "# Plots\n",
+    "## Comparing two ranking with Kendall's $\\tau$\n",
+    "\n",
+    "The results show that the two ranking by mutual information and Pearson's correlation vary greatly by Kendall's tau -- I also tried the Pearson's correlation between two ranking (not that I should do this) and the correlation is also very small.\n",
+    "\n",
+    "**So in summary, the two ranking vary greatly.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-05T20:40:01.361897Z",
+     "start_time": "2023-02-05T20:40:01.318269Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "abide_mi = np.load(r\"./ABIDE_age_MI_output.npy\")\n",
+    "plt.hist(np.log(abide_mi), 500)\n",
+    "plt.show()\n",
+    "\n",
+    "abide_pearson = np.load(r\"./ABIDE_age_Pearson_output.npy\")\n",
+    "plt.hist(np.log(np.abs(abide_pearson)), 500)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.scatter(np.log(abide_mi), abide_pearson, s=10,\n",
+    "            alpha=.2)  # s is the dot size\n",
+    "plt.show()\n",
+    "# keep this, add different selections\n",
+    "# PREDICT AGE\n",
+    "\n",
+    "print(\"Kendall's tau: \\n\",\n",
+    "      kendalltau(rankdata(-abide_mi), rankdata(-np.abs(abide_pearson))))\n",
+    "print(\"Pearson's correlation: \\n\",\n",
+    "      np.corrcoef(rankdata(-abide_mi), rankdata(-np.abs(abide_pearson))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8afd4dbe",
+   "metadata": {},
+   "source": [
+    "# Calculate MI for ABIDE data diagnosis outcome\n",
+    "## this block is only to be run on Compute Canada"
    ]
   },
   {
@@ -498,12 +654,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T03:56:14.897884Z",
-     "start_time": "2023-02-08T03:56:14.808167Z"
+     "end_time": "2023-02-08T06:25:25.279083Z",
+     "start_time": "2023-02-08T06:25:25.246967Z"
     }
    },
    "outputs": [],
@@ -667,12 +823,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T03:56:18.269524Z",
-     "start_time": "2023-02-08T03:56:14.917873Z"
+     "end_time": "2023-02-08T06:25:29.247395Z",
+     "start_time": "2023-02-08T06:25:25.498252Z"
     }
    },
    "outputs": [],
@@ -718,12 +874,13 @@
     "def plot_results(_plt, fun_name):\n",
     "    columns = np.load(r\"./ABIDE_predict_age/ABIDE_columns.npy\")\n",
     "    ABIDE_age_MI_foo = np.load(\n",
-    "        r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(fun_name=fun_name))\n",
+    "        r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n",
+    "            fun_name=fun_name))\n",
     "    ABIDE_age_Pearson_foo = np.load(\n",
-    "        r\"./ABIDE_predict_age/ABIDE_age_Pearson_{fun_name}.npy\".format(fun_name=fun_name))\n",
+    "        r\"./ABIDE_predict_age/ABIDE_age_Pearson_{fun_name}.npy\".format(\n",
+    "            fun_name=fun_name))\n",
     "    num_attr = np.around(np.linspace(\n",
-    "        0,\n",
-    "        len(columns), 10 + 1)[1:])  # ADJUST this based on actual settings\n",
+    "        0, len(columns), 10 + 1)[1:])  # ADJUST this based on actual settings\n",
     "\n",
     "    MI_RidgeCV_mean = np.mean(ABIDE_age_MI_foo, 1)\n",
     "    MI_RidgeCV_std = np.std(ABIDE_age_MI_foo, 1)\n",
@@ -738,8 +895,8 @@
     "                      alpha=.1)\n",
     "    _plt.plot(num_attr, Pearson_RidgeCV_mean, label=\"Pearson Correlation\")\n",
     "    _plt.fill_between(\n",
-    "        num_attr, (Pearson_RidgeCV_mean +\n",
-    "                   Pearson_RidgeCV_std * norm.ppf(0.025)),\n",
+    "        num_attr,\n",
+    "        (Pearson_RidgeCV_mean + Pearson_RidgeCV_std * norm.ppf(0.025)),\n",
     "        (Pearson_RidgeCV_mean + Pearson_RidgeCV_std * norm.ppf(0.975)),\n",
     "        color='b',\n",
     "        alpha=.1)\n",
@@ -774,7 +931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
