--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -189,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:25:17.396994Z",
-     "start_time": "2023-02-08T06:25:17.353033Z"
+     "end_time": "2023-02-08T06:36:26.451299Z",
+     "start_time": "2023-02-08T06:36:26.418460Z"
     }
    },
    "outputs": [],
@@ -327,7 +327,7 @@
     "    bash_script = open(\n",
     "        r\"./ABIDE_screening_\" + outcome + \"_\" + mem_setting + \".sh\", 'w')\n",
     "    bash_script.write(r\"\"\"#!/bin/bash\n",
-    "# SBATCH --account=def-cgreenwo_cpu\n",
+    "# SBATCH --account=def-cgreenwo\n",
     "# SBATCH --nodes=1\n",
     "# SBATCH --cpus-per-task=10\n",
     "# SBATCH --mem=80G\n",
@@ -373,12 +373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:25:21.165139Z",
-     "start_time": "2023-02-08T06:25:17.796024Z"
+     "end_time": "2023-02-08T06:36:29.884135Z",
+     "start_time": "2023-02-08T06:36:26.644842Z"
     }
    },
    "outputs": [],
@@ -654,12 +654,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:25:25.279083Z",
-     "start_time": "2023-02-08T06:25:25.246967Z"
+     "end_time": "2023-02-08T06:36:30.409062Z",
+     "start_time": "2023-02-08T06:36:30.375826Z"
     }
    },
    "outputs": [],
@@ -679,7 +679,7 @@
     "        r\"./ABIDE_predict_age/ABIDE_age_\" + dep_measure + \"_\" + fun_name +\n",
     "        \".py\", 'w')\n",
     "    bash_script.write(r\"\"\"#!/bin/bash\n",
-    "#SBATCH --account=def-cgreenwo_cpu\n",
+    "#SBATCH --account=def-cgreenwo\n",
     "#SBATCH --nodes=1\n",
     "#SBATCH --cpus-per-task=10\n",
     "#SBATCH --mem=80G\n",
@@ -823,12 +823,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:25:29.247395Z",
-     "start_time": "2023-02-08T06:25:25.498252Z"
+     "end_time": "2023-02-08T06:36:34.233976Z",
+     "start_time": "2023-02-08T06:36:30.729056Z"
     }
    },
    "outputs": [],
