update job name

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -193,8 +193,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:40:08.302179Z",
-     "start_time": "2023-02-08T06:40:08.268213Z"
+     "end_time": "2023-02-08T06:44:35.350256Z",
+     "start_time": "2023-02-08T06:44:35.317013Z"
     }
    },
    "outputs": [],
@@ -332,7 +332,7 @@
     "#SBATCH --cpus-per-task=10\n",
     "#SBATCH --mem=80G\n",
     "#SBATCH --time=18:00:00\n",
-    "#SBATCH --job-name=ABIDE_age\n",
+    "#SBATCH --job-name=ABIDE_screening_{outcome}_{mem_setting}\n",
     "\n",
     "module load gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
     "\n",
@@ -377,8 +377,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:40:12.255077Z",
-     "start_time": "2023-02-08T06:40:08.682259Z"
+     "end_time": "2023-02-08T06:44:39.272683Z",
+     "start_time": "2023-02-08T06:44:35.755267Z"
     }
    },
    "outputs": [],
@@ -658,8 +658,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:40:15.120521Z",
-     "start_time": "2023-02-08T06:40:15.077228Z"
+     "end_time": "2023-02-08T06:44:40.612693Z",
+     "start_time": "2023-02-08T06:44:40.578957Z"
     }
    },
    "outputs": [],
@@ -827,8 +827,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:40:19.347962Z",
-     "start_time": "2023-02-08T06:40:15.615962Z"
+     "end_time": "2023-02-08T06:44:44.352281Z",
+     "start_time": "2023-02-08T06:44:40.971899Z"
     }
    },
    "outputs": [],
