--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -189,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:44:35.350256Z",
-     "start_time": "2023-02-08T06:44:35.317013Z"
+     "end_time": "2023-02-08T07:00:36.535917Z",
+     "start_time": "2023-02-08T07:00:36.491480Z"
     }
    },
    "outputs": [],
@@ -256,7 +256,7 @@
     "\n",
     "mi_output = mi.continuous_screening_csv_parallel(csv_file,\n",
     "                                                 _usecols=abide_name,\n",
-    "                                                 csv_engine={_csv_engine},\n",
+    "                                                 csv_engine=\"{_csv_engine}\",\n",
     "                                                 sample=1250000,\n",
     "                                                 multp=10,\n",
     "                                                 core_num=10,\n",
@@ -267,7 +267,7 @@
     "\n",
     "skmi_output = mi.continuous_skMI_screening_csv_parallel(csv_file,\n",
     "                                                        _usecols=abide_name,\n",
-    "                                                        csv_engine={_csv_engine},\n",
+    "                                                        csv_engine=\"{_csv_engine}\",\n",
     "                                                        sample=1250000,\n",
     "                                                        multp=10,\n",
     "                                                        core_num=10,\n",
@@ -278,7 +278,7 @@
     "\n",
     "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
     "                                                   _usecols=abide_name,\n",
-    "                                                   csv_engine={_csv_engine},\n",
+    "                                                   csv_engine=\"{_csv_engine}\",\n",
     "                                                   sample=1250000,\n",
     "                                                   multp=10,\n",
     "                                                   core_num=10,\n",
@@ -298,7 +298,7 @@
     "\n",
     "mi_output = mi.binary_screening_csv_parallel(csv_file,\n",
     "                                             _usecols=abide_name,\n",
-    "                                             csv_engine={_csv_engine},\n",
+    "                                             csv_engine=\"{_csv_engine}\",\n",
     "                                             sample=1250000,\n",
     "                                             multp=10,\n",
     "                                             core_num=10,\n",
@@ -309,7 +309,7 @@
     "\n",
     "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
     "                                                   _usecols=abide_name,\n",
-    "                                                   csv_engine={_csv_engine},\n",
+    "                                                   csv_engine=\"{_csv_engine}\",\n",
     "                                                   sample=1250000,\n",
     "                                                   multp=10,\n",
     "                                                   core_num=10,\n",
@@ -373,12 +373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:44:39.272683Z",
-     "start_time": "2023-02-08T06:44:35.755267Z"
+     "end_time": "2023-02-08T07:00:40.334711Z",
+     "start_time": "2023-02-08T07:00:37.013543Z"
     }
    },
    "outputs": [],
@@ -654,12 +654,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:44:40.612693Z",
-     "start_time": "2023-02-08T06:44:40.578957Z"
+     "end_time": "2023-02-08T07:00:47.879625Z",
+     "start_time": "2023-02-08T07:00:47.807835Z"
     }
    },
    "outputs": [],
@@ -823,12 +823,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T06:44:44.352281Z",
-     "start_time": "2023-02-08T06:44:40.971899Z"
+     "end_time": "2023-02-08T07:00:59.601157Z",
+     "start_time": "2023-02-08T07:00:56.317540Z"
     }
    },
    "outputs": [],
@@ -931,7 +931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
